--- a/index.qmd
+++ b/index.qmd
@@ -10,26 +10,26 @@ pagetitle: Memory Modulation Lab
 ::::
 :::::
 
-::::: grid
-:::: g-col-12
+:::: grid
+::: g-col-12
 ![](/img/brain_montage_photos.png)
+:::
 ::::
-:::::
 
 ::::::::: grid
-:::: g-col-4
+:::: {.g-col-12 .g-col-sm-4}
 ::: {style="font-size: 1.2em; text-align: center;"}
 **How does the brain store and remember the details of past events?**
 :::
 ::::
 
-:::: g-col-4
+:::: {.g-col-12 .g-col-sm-4}
 ::: {style="font-size: 1.2em; text-align: center;"}
 **How do functional brain networks interact to support episodic memory?**
 :::
 ::::
 
-:::: g-col-4
+:::: {.g-col-12 .g-col-sm-4}
 ::: {style="font-size: 1.2em; text-align: center;"}
 **How does emotion interact with memory processes?**
 :::
@@ -62,10 +62,9 @@ pagetitle: Memory Modulation Lab
 
 We are located in the Department of Psychology and Neuroscience at Boston College:
 
-140 Commonwealth Ave., McGuinn 300 \
-Chestnut Hill, MA 02467 \
-<a href="mailto:thememolab@bc.edu" title="email"><i class="bi bi-envelope"></i></a> &nbsp;
-<a href="https://github.com/memobc" title="github"><i class="bi bi-github"></i></a> &nbsp;
+140 Commonwealth Ave., McGuinn 300\
+Chestnut Hill, MA 02467\
+<a href="mailto:thememolab@bc.edu" title="email"><i class="bi bi-envelope"></i></a>   <a href="https://github.com/memobc" title="github"><i class="bi bi-github"></i></a>  
 
 [Participate](/participate) in psychology and neuroscience research, or inquire about [joining the lab](/joinus).
 :::
