--- a/people.qmd
+++ b/people.qmd
@@ -23,7 +23,7 @@ listing:
 ## Alumni
 
 ::::: grid
-::: g-col-6
+::: {.g-col-12 .g-col-sm-6}
 #### Postdocs
 
 [Natalia Ladyka-Wojcik](https://www.linkedin.com/in/natalia-ladyka-wojcik-8404b6134/), 2024\
@@ -43,7 +43,7 @@ Paula Brooks, 2019-2023\
 [Max Bluestone](https://www.linkedin.com/in/max-bluestone/), 2016-2018
 :::
 
-::: g-col-6
+::: {.g-col-12 .g-col-sm-6}
 #### Undergraduate Thesis Students
 
 [Maddie Andrews](https://www.linkedin.com/in/maddie-andrews-795456224/), 2025\
@@ -74,12 +74,15 @@ Kelly Vogel, 2018
 ![](/people/img/photo_gallery/20221006_185636537.MP.jpg)
 
 ## 2020
+
 ![](/people/img/photo_gallery/20200505.jpg)
 
 ## 2021
+
 ![](/people/img/photo_gallery/20210728.jpg)
 
 ## 2019
+
 ![](/people/img/photo_gallery/20191214.jpg)
 
 ## 2018
@@ -89,5 +92,4 @@ Kelly Vogel, 2018
 ## 2017
 
 ![](/people/img/photo_gallery/memolab_group_2017.jpg)
-
 :::
