--- a/papers.qmd
+++ b/papers.qmd
@@ -28,6 +28,7 @@ cards <- map_chr(1:nrow(papers), function(i) {
   paper_link <- row$url %||% "#"
   oa_link <- row$openaccess %||% ""
   code_link <- row$code_url %||% ""
+  featured <- row$featured
   
   # Conditional icons
   oa_icon <- if (oa_link != "") {
@@ -35,15 +36,19 @@ cards <- map_chr(1:nrow(papers), function(i) {
   } else { "" }
   code_icon <- if (code_link != "") {
     glue('<a href="{code_link}" class="icon-link" target="_blank" title="data & code"><i class="bi bi-code-slash"></i></a>')
+  } else { "" }
+  featured_icon <- if (featured) {
+    glue('<i class="bi bi-bookmark-star-fill" style="color: #0d6efd; margin-right: 0.1rem; font-size: 0.7rem;"></i>')
  } else { "" }
 
   glue(
     '<div class="paper-row">
       <div class="paper-year">{year}</div>
       <div class="paper-info">
-        <div class="paper-title">
+        <div class="paper-title"> {featured_icon}
           <a href="{paper_link}" class="paper-link" target="_blank">{title}</a>
           <p class="paper-ref">{shortref}
+          
           {oa_icon}
           {code_icon}
         </p>
